doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_21\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;H:\APCS\Chapter 1
-d
H:\APCS\Chapter 1\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
H:\APCS\Chapter 1\Program2_7.java
<---- end of javadoc command ---->
Loading source file H:\APCS\Chapter 1\Program2_7.java...
H:\APCS\Chapter 1\Program2_7.java:32: error: class, interface, or enum expected
public static void main (String[] args)
              ^
1 error
